# simd_detect

./: .gitignore  CMakeLists.txt  README.md
src/: main.cxx
src/x86/: CMakeLists.txt  cpu_x86.cxx
